# Replica_Kanaa_Project

./: .gitignore  README.md  main.py  pyproject.toml  test.py
app/agent_tools/: financial_tool.py  rag_tool.py  reservations_tool.py  sandbox_tool.py  semanticsearch_tool.py  tool_getter.py  websearch_tool.py
app/agent_tools/helpers/: custom_table_info.py  load_sql_credentials.py
app/core/: llm_state.py
app/fshot/: few_shot_selector.py  sql_examples.py
app/prompt/: enhanced_prompt.py
app/rag/: rag_indexer.py  rag_store.py
app/sandbox/: enhanced_sandbox.py
app/semantic/: semantic_search_find.py  semantic_search_load.py
app/streaming/: event_handler.py  lazy_loading.py  streaming.py  tool_execution.py
app/utilities/: photo_uploader.py
docs/: agent_info.md  prompt_info.md  rag_info.md  streaming_info.md  utilities_info.md
