[project]
name = "kaana-data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-cohere>=0.4.5",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-experimental>=0.3.4",
    "langchain-tavily>=0.2.11",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "psycopg[binary]>=3.2",
    "tiktoken>=0.11.0",
    "uvicorn[standart]>=0.35.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "langchain-openai>=0.3.32",
]
